Upload images as multipart data in projects
